index v1 ready, frame ready

--- a/001-hello-world/index.html
+++ b/001-hello-world/index.html
@@ -2,8 +2,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tibor's experiments</title>
+	<link rel="stylesheet" href="../css/common.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-	<h1>Hello world</h1>
+	<header id="main"></header>
+
+	<section>
+		<h1>Hello World</h1>
+	</section>
+
+	<script src="../js/header.js"></script>
 </body>
 </html>
