--- a/002-acid/index.html
+++ b/002-acid/index.html
@@ -2,8 +2,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tibor's experiments</title>
+	<link rel="stylesheet" href="../css/common.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
-	<h1>Acid</h1>
+	<header id="main"></header>
+	<section>
+		<h1>The sound of acid</h1>
+	</section>
+	<script src="../js/header.js"></script>
 </body>
 </html>
