--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 		.bg { 
 			/* Generated with http://gradient.quasi.ink */
 			background-size: cover;
-			background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAADCAYAAABfwxXFAAAAXElEQVQIWwXBOw5AQBRA0fu8GUwk4hMdlU5iAWIPlqS0E/uSaBVoiXGO7MvoVQVjFbWGwEUYF6ORRfZ58Of1cFwvGkCRGrIqxpUJsk69386P+4VUocuFtgkp64QfWmkTbxoCGq8AAAAASUVORK5CYII=");
+			background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAADCAYAAABfwxXFAAAAYklEQVQYVwFXAKj/AYwrcP9IKEEAdsKbAB4kEAAyLzwA7eTsADM5GQABwzaZ/8js2QDs+v8ACP8XAOsc5gAAEP8A9fjqAAG2RY7/GT8lAPzTAwD81gcAzCPPAKPWrAANBAgA2cUifzWXtmoAAAAASUVORK5CYII=");
 		}
 
 		body {
 			font-family: 'Old Standard TT', serif;
+		}
+
+		a {
+			position: absolute;
+			bottom: 3rem;
 		}
 
 		canvas {
@@ -32,7 +37,7 @@
 		p {
 			font-family: 'Open Sans', sans-serif;
 			font-size: 1.2rem;
-			margin-bottom: 1rem;
+			margin-bottom: 2rem;
 		}
 
 	</style>
@@ -44,7 +49,7 @@
 		</div>
 		<div class="centerize title">
 			<h1>Experiments in generative art</h1>
-			<p>I've started to collect my 2D, 3D explorations of various ideas in this repository</p>
+			<!-- <p>I've started to collect my 2D, 3D explorations of various ideas in this repository</p> -->
 			<a href="/" class="button">Get started</a>
 		</div>
 	</section>
